fixed About page layout on mobile

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -265,7 +265,7 @@ a {
     }
 
     .primary-text-container.main-state {
-        width: 80vw;
+        width: 90vw;
         min-width: 80vw;
     }
 
